tests/positive/ImportAsOpen/Main.juvix
module Main;

import Other as O open;

B : Type := A;

B' : Type := O.A;
