tests/negative/Internal/WrongType.juvix
module WrongType;

type A := a : A;
open A;

type B := b : B;
open B;

f : A := b;
